<resources>
    <string name="app_name">Cartrack App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="select_country_title">Select Country</string>
    <string name="country_prefix_placeholder">PH</string>
    <string name="country_flag_placeholder">🇵🇭</string>
    <string name="country_name_placeholder">Philippines</string>
    <string name="dialog_login_error">Login Error</string>
    <string name="dialog_title_permissions">Persmissions</string>
    <string name="dialog_permission_request_message">%1$s phone requires all permissions to be allowed.</string>
    <string name="dialog_permission_btn_text_show_again">Show Permission</string>
    <string name="dialog_permission_btn_text_exit">Exit</string>
    <string name="dialog_permission_network_settings">No Internet Access \nOpen Settings?</string>

    <string name="progress_dialog_loading_message">Loading...</string>
    <string name="progress_dialog_loading_login_message">Logging In...</string>
    <string name="title_registration_submit">SUBMIT</string>

    <!--**Registration**-->
    <string name="title_personal_information">PERSONAL INFORMATION</string>
    <string name="title_registration_selector"> - OR Sign Up Using -</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_already_has_an_email">Already has an email?</string>
    <string name="title_suggest_current_email">Suggest Email</string>
    <string name="title_preferred_username">Preferred User Name</string>
    <string name="title_additional_information">ADDITIONAL INFORMATION</string>
    <string name="title_retype_password">Re-enter Password</string>
    <string name="title_security_question">Enter Security Question</string>
    <string name="title_security_answer">Enter Answer</string>
    <string name="error_empty_email">Email should not be empty</string>
    <string name="error_empty_person_name">Person should must not be empty</string>
    <string name="error_empty_user_name">User name should not be empty</string>
    <string name="error_empty_password">Password should not be empty</string>
    <string name="error_empty_repeat_password">This should not be empty</string>
    <string name="error_repeat_password_not_equal">Password is not equal</string>
    <string name="error_empty_security_question">Security question should not be empty</string>
    <string name="error_empty_security_answer">Answer should not be empty</string>
    <string name="title_activity_dashboard">Dashboard Activity</string>
    <string name="title_activity_dashboard_toolbar">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_dashboard_search_items_column">SEARCH ITEMS</string>
    <string name="title_dashboard_add_items_column">ADD ITEMS</string>
    <string name="title_dashboard_edit_items_column">EDIT ITEMS</string>
    <string name="title_dashboard_delete_items_column">DELETE ITEMS</string>
    <string name="title_dashboard_checkout_items_column">CHECK OUT</string>

    <string name="title_nav_search_items">Search Item</string>
    <string name="title_nav_my_shopping_cart">My Cart</string>
    <string name="title_nav_add_single_item">Add Item</string>
    <string name="title_nav_remove_single_item">Remove Item</string>
    <string name="title_nav_check_out_items">Check Out Items</string>
    <string name="title_dashboard_search_result_list_column">Result</string>
    <string name="title_dashboard_search_categories_column">Categories</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sample_title">Sample Title</string>
    <string name="list_item_summary_text">List View Search Result Item Summary Detail Text View</string>
    <string name="delete_cart_description">Delete Cart</string>
    <string name="value_place_holder_text">0</string>
    <string name="add_cart_description">Add Cart</string>
    <string name="nav_header_description">Navigation Header</string>
    <string name="nav_header_name_place_holder_text">Android Studio</string>
    <string name="nav_header_email_place_holder_text">android.studio@android.com</string>
    <string name="navigation_drawer_category_separator_title">Communicate</string>
    <string name="nav_sub_item_send_title">Send</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
