<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_select_country_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_marginTop="@dimen/margin_2dp"
    app:cardCornerRadius="@dimen/margin_10dp"
    android:layout_margin="@dimen/margin_30dp">

    <RelativeLayout
        android:id="@+id/item_select_country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_select_country_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin_10dp"
            android:text="@string/country_prefix_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/item_select_country_flag_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_toEndOf="@+id/item_select_country_prefix"
            android:layout_marginRight="@dimen/margin_20dp"
            android:text="@string/country_flag_placeholder"/>

        <TextView
            android:id="@+id/item_select_country_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_toEndOf="@+id/item_select_country_flag_tv"
            android:text="@string/country_name_placeholder"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>