<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_frame"
    tools:context=".feature.auth.login.ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <RelativeLayout
            android:id="@+id/username_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginRight="@dimen/margin_30dp"
            android:background="@drawable/rounded_layout"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:descendantFocusability="beforeDescendants">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/username_icon_iv"
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:layout_margin="@dimen/margin_10dp"
                    android:src="@drawable/user_icon" />

                <EditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:inputType="textImeMultiLine"
                    android:singleLine="true"
                    android:hint="@string/username_hint"
                    android:padding="@dimen/margin_10dp"
                    android:textSize="@dimen/text_14sp"
                    android:background="#00000000"
                    android:text="@{loginViewModel.userNameTv}"
                    android:layout_toRightOf="@+id/username_icon_iv"
                    android:layout_toEndOf="@+id/username_icon_iv"
                    android:drawablePadding="@dimen/margin_10dp"/>
            </RelativeLayout>



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginRight="@dimen/margin_30dp"
            android:background="@drawable/rounded_layout"
            android:layout_below="@+id/username_card_view"
            android:layout_marginBottom="@dimen/margin_10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/password_icon_iv"
                    android:layout_width="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_20dp"
                    android:src="@drawable/password_icon"
                    android:layout_margin="@dimen/margin_10dp"/>

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:hint="@string/password_hint"
                    android:text="@{loginViewModel.passwordTv}"
                    android:layout_toRightOf="@+id/password_icon_iv"
                    android:layout_toEndOf="@+id/password_icon_iv"
                    android:padding="@dimen/margin_10dp"
                    android:textSize="@dimen/text_14sp"
                    android:background="#00000000"
                    android:drawablePadding="@dimen/margin_10dp"/>

            </RelativeLayout>

        </RelativeLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_continue_horizontal"
            android:layout_below="@+id/password_card_view"
            android:layout_marginTop="@dimen/margin_5dp"
            android:layout_marginLeft="@dimen/margin_50dp"
            android:layout_marginRight="@dimen/margin_50dp"
            android:text="@string/title_activity_login"/>

        <TextView
            android:id="@+id/registration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_activity_sign_up"
            android:padding="@dimen/margin_20dp"/>

    </RelativeLayout>

</FrameLayout>

